# ensembldb3

./: .hgignore  README.md  README.rst  noxfile.py  pyproject.toml  setup.py
doc/: Makefile  accounts_species.rst  admin.rst  advanced.rst  compara.rst  conf.py  database_optimisations.rst  doctest2script.py  doctest_rsts.py  ensembl_snips.rst  genome.rst  index.rst  install.rst  licenses.rst  query_ensembl.rst  rtd-environment.yml  variation.rst
ensembldb/: __init__.py  admin.py  assembly.py  compara.py  database.py  download.py  feature_level.py  genome.py  host.py  name.py  region.py  related_region.py  sequence.py  species.py  util.py
ensembldb/data/: ensembldb_download.cfg  sample_ensembl.cfg  species.tsv
ensembldb3/: __init__.py  admin.py  assembly.py  compara.py  database.py  download.py  feature_level.py  genome.py  host.py  name.py  region.py  related_region.py  sequence.py  species.py  util.py
ensembldb3/data/: ensembldb_download.cfg  mysql.cfg  species.tsv
src/ensembl_cli/: __init__.py  admin.py  aligndb.py  cli.py  convert.py  download.py  emf.py  ftp_download.py  install.py  name.py  species.py  util.py
src/ensembl_cli/data/: ensembldb_download.cfg
src/ensembldb3/: __init__.py  admin.py  assembly.py  compara.py  database.py  download.py  feature_level.py  genome.py  host.py  name.py  region.py  related_region.py  sequence.py  species.py  util.py
tests/: __init__.py  conftest.py  test_aligndb.py  test_assembly.py  test_cli.py  test_compara.py  test_convert.py  test_database.py  test_emf.py  test_ensembl_admin.py  test_feature_level.py  test_genome.py  test_host.py  test_metazoa.py  test_species.py  test_util.py  test_variation.py
tests/data/: HBB_gene_tree.nh  ensembl_all_species.nh  sample-CHECKSUMS  sample-MD5SUM  sample.emf
