[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ensembl_cli"
description = """Ensembl cli tools"""
# remember to update cogent3/_version.py too!
version = "2023.7.9a1"
authors = [
    { name = "Gavin Huttley", email = "Gavin.Huttley@anu.edu.au"},
]
keywords = ["biology", "genomics", "evolution", "bioinformatics"]
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.8,<3.12"
dependencies = ["click",
        "scitrack",
        "typing_extensions",
        "cogent3 @ git+https://github.com/cogent3/cogent3.git@develop",
        "pydantic",
        "rich",
        "numpy",
        "unsync",
        ]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
    ]

[project.urls]
Documentation = "https://github.com/cogent3/ensembl_cli"
"Bug Tracker" = "https://github.com/cogent3/ensembl_cli/issues"
"Source Code" = "https://github.com/cogent3/ensembl_cli"

[project.scripts]
ensembl_cli = "ensembl_cli.admin:main"

[project.optional-dependencies]
test = [
    "black==23.3.0",
    "isort==5.12.0",
    "click==8.1.3", # black needs this pinned
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "nox"]
doc  = ["click==8.1.3",
        "sphinx",
        "sphinx-autobuild",
        "sphinx>=1.6",
        "sphinx_book_theme",
        "sphinx_panels",
        "sphinxcontrib-bibtex"]
dev = ["black==23.3.0",
       "click==8.1.3",
       "flit",
       "ipykernel",
       "ipython",
       "ipywidgets",
       "isort==5.12.0",
       "jupyter-sphinx",
       "jupyter_client",
       "jupyterlab",
       "jupytext",
       "kaleido",
       "nbconvert>5.4",
       "nbformat",
       "nbsphinx",
       "nox",
       "numpydoc",
       "pandas",
       "pillow",
       "plotly",
       "psutil",
       "pytest",
       "pytest-cov",
       "pytest-xdist",
       "scriv",
       "sphinx",
       "sphinx-autobuild",
       "sphinx_book_theme",
       "sphinx_panels",
       "sphinxcontrib-bibtex"]

[tool.flit.sdist]
include = ["doc/", "requirements.txt", "src/*", "pyproject.toml"]
exclude = ["doc/*.html"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    ]

addopts = ["--strict-config", "-ra"]
testpaths = "tests"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.venv
  | _build
  | build
  | dist
  | tests/data
)/
'''

[tool.isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
use_parentheses=true
src_paths = ["src", "tests","doc","noxfile.py"]

[tool.scriv]
format="md"
categories=["Contributors", "ENH", "BUG", "DOC", "Deprecations", "Discontinued"]
output_file="changelog.md"
version="literal: src/cogent3/__init__.py:__version__"
skip_fragments="README.*"
new_fragment_template="file: changelog.d/templates/new.md.j2"
entry_title_template="file: changelog.d/templates/title.md.j2"
